--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     
-    <header>
+    <header class="container-header">
+        <h1>header</h1>
         <nav></nav>
     </header>
+
     <main></main>
+    
     <section>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Soluta voluptas a tenetur illo porro aspernatur!
