--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
         <nav></nav>
     </header>
 
-    <main></main>
+    <main>
+        <section>
+            <video src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4">
+            </video>
+            <video controls>
+                <source
+                    type="video/webm"
+                    src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+                />
+            </video>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        </section>
+    </main>
     
-    <section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Soluta voluptas a tenetur illo porro aspernatur!
-            Omnis placeat fuga enim corporis modi est corrupti illum dicta, 
-            at consequatur itaque amet! Deserunt.</p>
+    <section class="container-section-promo">
+        <video controls></video>
+        <article class="item-article"></article>
     </section>
+
     <footer></footer>
 
 </body>
